--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ p {
 	color: crimson;
 }
 
-
+/* HEADER */
 #header {
 	position: fixed;
 	z-index: 1000;
@@ -83,7 +83,7 @@ p {
 #header .header {
 	min-height: 8vh;
 	background-color: rgba(31, 30, 30, 0.24);
-	transition: 0.3s ease background-color;
+	transition: 0.3s background-color;
 }
 #header .nav-bar {
 	display: flex;
@@ -94,6 +94,8 @@ p {
 	max-width: 1300px;
 	padding: 0 10px;
 }
+
+/* MOBILE NAV */
 #header .nav-list ul {
 	list-style: none;
 	position: absolute;
@@ -116,12 +118,11 @@ p {
 #header .nav-list ul a {
 	font-size: 2.5rem;
 	font-weight: 500;
-	letter-spacing: 0.2rem;
-	text-decoration: none;
 	color: white;
 	text-transform: uppercase;
 	padding: 20px;
 	display: block;
+	position: relative;
 }
 #header .nav-list ul a::after {
 	content: attr(data-after);
@@ -143,6 +144,7 @@ p {
 	color: crimson;
 }
 
+/* HOME */
 #home {
 	background-size: cover;
 	background-position: top center;
@@ -175,9 +177,6 @@ p {
 	animation: text_reveal 0.5s ease forwards;
 	animation-delay: 1s;
 }
-#home h1:nth-child(1) {
-	animation-delay: 1s;
-}
 #home h1:nth-child(2) {
 	animation-delay: 2s;
 }
@@ -195,94 +194,43 @@ p {
 	animation: text_reveal_box 1s ease;
 	animation-delay: 0.5s;
 }
-#home h1:nth-child(1) span {
-	animation-delay: 0.5s;
-}
-#home h1:nth-child(2) span {
-	animation-delay: 1.5s;
-}
-#home h1:nth-child(3) span {
-	animation-delay: 2.5s;
-	
-}
 
-
-
-.productivity-tools,.responsive-web,.Designing-presentation,.navigating-google {
-	color: black;
-  }
-
+/* PROJECTS */
 #projects .projects {
 	flex-direction: column;
 	max-width: 1200px;
 	margin: 0 auto;
 	padding: 100px 0;
 }
-#projects .projects-header h1 {
-	margin-bottom: 50px;
-}
 #projects .all-projects {
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	flex-direction: column;
 }
 #projects .project-item {
 	display: flex;
-	align-items: center;
-	justify-content: center;
 	flex-direction: column;
 	width: 80%;
 	margin: 20px auto;
-	overflow: hidden;
 	border-radius: 10px;
+	overflow: hidden;
 }
 #projects .project-info {
 	padding: 30px;
-	flex-basis: 50%;
-	height: 100%;
-	display: flex;
-	align-items: flex-start;
-	justify-content: center;
-	flex-direction: column;
 	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
 	color: white;
-}
-#projects .project-info h1 {
-	font-size: 4rem;
-	font-weight: 500;
-}
-#projects .project-info h2 {
-	font-size: 1.8rem;
-	font-weight: 500;
-	margin-top: 10px;
-}
-#projects .project-info p {
-	color: white;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 #projects .project-img {
-	flex-basis: 50%;
 	height: 300px;
-	overflow: hidden;
 	position: relative;
-}
-#projects .project-img:after {
-	content: '';
-	position: absolute;
-	left: 0;
-	top: 0;
-	height: 100%;
-	width: 100%;
-	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-	opacity: 0.7;
-}
-#projects .project-img img {
-	transition: 0.3s ease transform;
-}
-#projects .project-item:hover .project-img img {
-	transform: scale(1.1);
+	overflow: hidden;
 }
 
+/* ABOUT */
 #about .about {
 	flex-direction: column-reverse;
 	text-align: center;
@@ -297,81 +245,16 @@ p {
 #about .col-right {
 	width: 100%;
 }
-#about .col-right h2 {
-	font-size: 1.8rem;
-	font-weight: 500;
-	letter-spacing: 0.2rem;
-	margin-bottom: 10px;
-}
-#about .col-right p {
-	margin-bottom: 20px;
-}
-#about .col-right .cta {
-	color: black;
-	margin-bottom: 50px;
-	padding: 10px 20px;
-	font-size: 2rem;
-}
-#about .col-left .about-img {
-	height: 100%;
-	width: 100%;
-	position: relative;
-	border: 10px solid white;
-}
-#about .col-left .about-img::after {
-	content: '';
-	position: absolute;
-	left: -33px;
-	top: 19px;
-	height: 98%;
-	width: 98%;
-	border: 7px solid crimson;
-	z-index: -1;
-}
 
+/* CONTACT */
 #contact .contact {
 	flex-direction: column;
+	width: 90%;
 	max-width: 1200px;
 	margin: 0 auto;
-	width: 90%;
-}
-#contact .contact-items {
-	/* max-width: 400px; */
-	width: 100%;
-}
-#contact .contact-item {
-	width: 80%;
-	padding: 20px;
-	text-align: center;
-	border-radius: 10px;
-	padding: 30px;
-	margin: 30px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	box-shadow: 0px 0px 18px 0 #0000002c;
-	transition: 0.3s ease box-shadow;
-}
-#contact .contact-item:hover {
-	box-shadow: 0px 0px 5px 0 #0000002c;
-}
-#contact .icon {
-	width: 70px;
-	margin: 0 auto;
-	margin-bottom: 10px;
-}
-#contact .contact-info h1 {
-	font-size: 2.5rem;
-	font-weight: 500;
-	margin-bottom: 5px;
-}
-#contact .contact-info h2 {
-	font-size: 1.3rem;
-	line-height: 2rem;
-	font-weight: 500;
 }
 
+/* FOOTER */
 #footer {
 	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
 }
@@ -381,59 +264,12 @@ p {
 	padding-top: 50px;
 	padding-bottom: 10px;
 }
-#footer h2 {
-	color: white;
-	font-weight: 500;
-	font-size: 1.8rem;
-	letter-spacing: 0.1rem;
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
-#footer .social-icon {
-	display: flex;
-	margin-bottom: 30px;
-}
-#footer .social-item {
-	height: 50px;
-	width: 50px;
-	margin: 0 5px;
-}
-#footer .social-item img {
-	filter: grayscale(1);
-	transition: 0.3s ease filter;
-}
-#footer .social-item:hover img {
-	filter: grayscale(0);
-}
-#footer p {
-	color: white;
-	font-size: 1.3rem;
-}
 
-
-@keyframes text_reveal_box {
-	50% {
-		width: 100%;
-		left: 0;
-	}
-	100% {
-		width: 0;
-		left: 100%;
-	}
-}
-@keyframes text_reveal {
-	100% {
-		color: white;
-	}
-}
-@keyframes text_reveal_name {
-	100% {
-		color: crimson;
-		font-weight: 500;
-	}
-}
-
+/* ------------------------------------- */
+/*           RESPONSIVE SECTION          */
+/* ------------------------------------- */
 @media only screen and (min-width: 768px) {
+
 	.cta {
 		font-size: 2.5rem;
 		padding: 20px 60px;
@@ -442,95 +278,10 @@ p {
 		font-size: 6rem;
 	}
 
-	
-	#hero h1 {
-		font-size: 7rem;
-	}
-
-	#services .service-bottom .service-item {
-		flex-basis: 45%;
-		margin: 2.5%;
-	}
-	
-	#projects .project-item {
-		flex-direction: row;
-	}
-	#projects .project-item:nth-child(even) {
-		flex-direction: row-reverse;
-	}
-	#projects .project-item {
-		height: 400px;
-		margin: 0;
-		width: 100%;
-		border-radius: 0;
-	}
-	#projects .all-projects .project-info {
-		height: 100%;
-	}
-	#projects .all-projects .project-img {
-		height: 100%;
-	}
-
-	#about .about {
-		flex-direction: row;
-	}
-	#about .col-left {
-		width: 600px;
-		height: 400px;
-		padding-left: 60px;
-	}
-	#about .about .col-left .about-img::after {
-		left: -45px;
-		top: 34px;
-		height: 98%;
-		width: 98%;
-		border: 10px solid crimson;
-	}
-	#about .col-right {
-		text-align: left;
-		padding: 30px;
-	}
-	#about .col-right h1 {
-		text-align: left;
-	}
-	
-	#contact .contact {
-		flex-direction: column;
-		padding: 100px 0;
-		align-items: center;
-		justify-content: center;
-		min-width: 20vh;
-	}
-	#contact .contact-items {
-		width: 100%;
-		display: flex;
-		flex-direction: row;
-		justify-content: space-evenly;
-		margin: 0;
-	}
-	#contact .contact-item {
-		width: 30%;
-		margin: 0;
-		flex-direction: row;
-	}
-	#contact .contact-item .icon {
-		height: 100px;
-		width: 100px;
-	}
-	#contact .contact-item .icon img {
-		object-fit: contain;
-	}
-	#contact .contact-item .contact-info {
-		width: 100%;
-		text-align: left;
-		padding-left: 20px;
-	}
-	
-}
-
+	/* DESKTOP MENU */
 	#header .nav-list ul {
 		position: initial;
-		display: block;
+		display: flex;
 		height: auto;
 		width: fit-content;
 		background-color: transparent;
@@ -541,13 +292,43 @@ p {
 	#header .nav-list ul li a {
 		font-size: 1.8rem;
 	}
-	#header .nav-list ul a:after {
+	#header .nav-list ul a::after {
 		display: none;
 	}
 
-
-	#services .service-bottom .service-item {
-		flex-basis: 22%;
-		margin: 1.5%;
+	/* PROJECTS */
+	#projects .project-item {
+		flex-direction: row;
+		height: 400px;
+		width: 100%;
+		margin: 0;
+		border-radius: 0;
+	}
+	#projects .project-item:nth-child(even) {
+		flex-direction: row-reverse;
 	}
 
+	/* ABOUT */
+	#about .about {
+		flex-direction: row;
+	}
+	#about .col-left {
+		width: 600px;
+		height: 400px;
+		padding-left: 60px;
+	}
+	#about .col-right {
+		padding: 30px;
+		text-align: left;
+	}
+
+	/* CONTACT */
+	#contact .contact-items {
+		display: flex;
+		justify-content: space-evenly;
+	}
+	#contact .contact-item {
+		width: 30%;
+		flex-direction: row;
+	}
+}
